--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,7 @@
 *.userprefs
 
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
 bld/
-[Bb]in/
 [Oo]bj/
 [Ll]og/
 
@@ -259,3 +252,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+inter/
+
+bin/**/*.*
+!bin/**/*.dll
